# GenesisII

./: .env  .gitignore  Dockerfile  Dockerfile_prod  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.1.pckl.tmp  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.2.pckl.tmp  .langgraph_checkpoint.3.pckl  .langgraph_checkpoint.3.pckl.tmp  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/ai/: checkStorage.py  langgraph.py
src/ai/langgraph/: BaseAgent.py  graph.py
src/ai/langgraph/nodes/: exec_agent.py  load_memories.py  prompt_factory.py  save_interaction.py  summary.py
src/ai/services/: chunker.py  docsLoaders.py
src/ai/tools/: ChatHistory.py  FAISS.py
src/aiserver/: langgraph.py  main.py
src/api/: models.py  server.py
src/api/controllers/: archiveController.py  iaAgentController.py  usuarioController.py
src/api/database/: engine.py  models.py
src/api/database/migrations/: env.py
src/api/database/migrations/versions/: 0da8110560f2_adicionando_as_colunas_de_controle_de_.py  30ea24edb143_corrigindo_os_created_at_de_todas_as_.py  356f35356e5d_criando_as_tabelas_para_o_agente_de_ia.py  596a5724cb70_melhorando_mais_uma_vez_tabela_de_.py  8de153b6eb55_corrigindo_datetime_banco.py  94c3ab2efa60_melhorando_tabela_de_histórico_de_chats.py  9bb72d75ebb9_inicializado_projeto_com_tabela_de_.py  a4f5633a86a6_criando_tabela_de_documentos.py  a552a2ab830b_adicionando_tabela_de_resumidores_de_.py  aabf86a23a3c_adicionando_coluna_ativo_na_tabela_de_.py  b57e7102a598_guardando_refresh_token_no_banco.py  (+2 more)
src/api/migrations/: env.py
src/api/migrations/versions/: d8e6334cf52b_acertando_tipos_da_table_usuarios.py
src/api/services/: dbService.py
src/api/shared/: Annotateds.py  schemas.py
src/api/shared/DTO/: ErrorResponse.py
src/api/utils/: JWT.py  OAuth2.py  PasswordHash.py
tests/api/: conftest.py  test_server.py  test_usuario.py
