[project]
name = "aiserver"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Faé Baldan",email = "lucasbaldan2014@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain[openai] (>=0.3.24,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langgraph (>=0.4.1,<0.5.0)",
    "langgraph-cli[inmem] (>=0.2.8,<0.3.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "langchain-community (>=0.3.23,<0.4.0)"
]

[tool.poetry]
packages = [{include = "aiserver", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
