[project]
name = "aiserver"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Faé Baldan",email = "lucasbaldan2014@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain[openai] (>=0.3.24,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langgraph (>=0.4.1,<0.5.0)",
    "langgraph-cli[inmem] (>=0.2.8,<0.3.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]
packages = [{include = "aiserver", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'uvicorn src.api.server:app --reload'
test_api = 'pytest --cov=src/api -vv'
post_test_api = 'coverage html'
mig_run = 'alembic upgrade head'